--- a/index.html
+++ b/index.html
@@ -11,147 +11,144 @@
   <link rel="manifest" href="/site.webmanifest">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
+
 <body>
-<header>
-  <div class="container">
-    <a href="#" class="logo">PENNIO.DESIGN</a>
-    <nav class="nav-links" id="nav-menu">
-      <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#portfolio">Portfolio</a></li>
-        <li><a href="#instagram">Instagram</a></li>
-        <li><a href="#contact">Contact</a></li>
-        <li><a href="https://pennio-design.github.io/bylt" target="_blank">BYLT</a></li>
-      </ul>
-    </nav>
-    <a href="#contact" class="cta-btn">Get in Touch</a>
-    <button id="menu-toggle">
-      <i class="fa-solid fa-bars"></i>
-    </button>
+  <!-- Header -->
+  <header>
+    <div class="container">
+      <a href="#" class="logo">PENNIO.DESIGN</a>
+      <nav class="nav-links" id="nav-menu">
+        <ul>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#portfolio">Portfolio</a></li>
+          <li><a href="#services">Services</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+      <a href="#contact" class="cta-btn">Get in Touch</a>
+      <button id="menu-toggle"><i class="fa-solid fa-bars"></i></button>
+    </div>
+  </header>
+
+  <!-- Floating Contact Icons -->
+  <div class="floating-icons">
+    <a href="https://instagram.com/pennio.design" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+    <a href="https://wa.me/2348101833138" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
   </div>
-</header>
 
-<!-- Floating Contact Icons -->
-<div class="floating-icons">
-  <a href="https://instagram.com/pennio.design" target="_blank" rel="noopener noreferrer">
-    <i class="fa-brands fa-instagram"></i>
-  </a>
-  <a href="https://wa.me/2348101833138" target="_blank" rel="noopener noreferrer">
-    <i class="fa-brands fa-whatsapp"></i>
-  </a>
-</div>
+  <!-- Hero -->
+  <section id="home" class="hero">
+    <h2 class="gradient-text">Building Brands that Speak, Sell & Stay</h2>
+    <p>PENNIO helps businesses create clarity-driven brands that look good, sound right, and grow strong — without stress.</p>
+    <div class="cta-group">
+      <button class="cta" onclick="window.location.href='#contact'">Start Your Project</button>
+      <button class="cta alt" onclick="prefillService('Clarity Session')">Book a Clarity Session</button>
+    </div>
+  </section>
 
-<!-- HERO Section -->
-<section id="home" class="hero">
-  <h2>Building Brands that Speak, Sell & Stay</h2>
-  <p>PENNIO helps businesses build clarity-driven brands that look good, sound right, and grow strong — without stress.</p>
-  <div class="cta-group">
-    <button class="cta" onclick="window.location.href='#contact'">Start Your Project</button>
-    <button class="cta alt" onclick="prefillService('Clarity Session')">Book a Clarity Session</button>
-    <button class="cta link" onclick="window.open('https://pennio-design.github.io/bylt', '_blank')">Explore BYLT</button>
+  <!-- Portfolio -->
+  <section id="portfolio">
+    <h2 class="gradient-text">Featured Work</h2>
+    <p>Every brand tells a story. Here are a few I’ve helped bring to life.</p>
+    <button id="openPortfolio" class="cta">View My PDF Portfolio</button>
+  </section>
+
+  <!-- Services -->
+  <section id="services">
+    <h2 class="gradient-text">Services</h2>
+    <p>Explore how we help brands grow with clarity, creativity, and confidence.</p>
+    <div class="service-buttons">
+      <button onclick="prefillService('Brand Systems Setup (BYLT4U)')"><i class="fa-solid fa-layer-group"></i><br>Brand Systems Setup (BYLT4U)</button>
+      <button onclick="prefillService('Campaign Strategy')"><i class="fa-solid fa-bullhorn"></i><br>Campaign Strategy</button>
+      <button onclick="prefillService('Brand Design')"><i class="fa-solid fa-pen-nib"></i><br>Brand Design</button>
+      <button onclick="prefillService('Website Experience')"><i class="fa-solid fa-globe"></i><br>Website Experience</button>
+      <button onclick="prefillService('Automation Flow')"><i class="fa-solid fa-gear"></i><br>Automation Flow</button>
+      <button onclick="prefillService('Content System')"><i class="fa-solid fa-comments"></i><br>Content System</button>
+      <button onclick="prefillService('Clarity Session')"><i class="fa-solid fa-lightbulb"></i><br>Clarity Session</button>
+    </div>
+  </section>
+
+  <!-- Instagram -->
+  <section id="instagram">
+    <h2 class="gradient-text">Latest Projects</h2>
+    <div class="instagram-container">
+      <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/pennio.design/" data-instgrm-version="14"></blockquote>
+      <script async src="//www.instagram.com/embed.js"></script>
+    </div>
+  </section>
+
+  <!-- Contact -->
+  <section id="contact">
+    <h2 class="gradient-text">Let’s Build Together</h2>
+    <p>Tell me what you want to create — I’ll help you bring it to life with design, clarity, and purpose.</p>
+
+    <form id="contactForm" action="https://formsubmit.co/91dd305c9a1f9afd33dc0ca5b60f1311" method="POST" target="hidden_iframe">
+      <input type="hidden" name="_subject" value="New Project Request from PENNIO.DESIGN" />
+      <input type="hidden" name="_captcha" value="false" />
+
+      <input type="text" name="name" placeholder="Your Name" required>
+      <input type="email" name="email" placeholder="Your Email" required>
+
+      <label for="service">Choose a Service</label>
+      <select name="service" id="service" required>
+        <option value="" disabled selected>Select one...</option>
+        <option value="Brand Systems Setup (BYLT4U)">Brand Systems Setup (BYLT4U)</option>
+        <option value="Campaign Strategy">Campaign Strategy</option>
+        <option value="Brand Design">Brand Design</option>
+        <option value="Website Experience">Website Experience</option>
+        <option value="Automation Flow">Automation Flow</option>
+        <option value="Content System">Content System</option>
+        <option value="Clarity Session">Clarity Session</option>
+      </select>
+
+      <textarea name="message" id="message" placeholder="Tell me about your project..." required></textarea>
+      <button type="submit">Send Message</button>
+    </form>
+
+    <iframe name="hidden_iframe" style="display:none;"></iframe>
+
+    <div id="thank-you-message" style="display:none;">
+      <h3>Thank You!</h3>
+      <p>Your message has been sent successfully. I’ll be in touch shortly.</p>
+      <a href="#contact" id="refreshForm">Send another message</a>
+    </div>
+  </section>
+
+  <script>
+    function prefillService(serviceName) {
+      document.getElementById('service').value = serviceName;
+      document.getElementById('message').value = `Hi PENNIO, I’m interested in the ${serviceName} service.`;
+      document.querySelector('#contact').scrollIntoView({ behavior: 'smooth' });
+    }
+
+    document.getElementById("contactForm").addEventListener("submit", function () {
+      document.getElementById("contactForm").style.display = "none";
+      document.getElementById("thank-you-message").style.display = "block";
+    });
+
+    document.getElementById("refreshForm").addEventListener("click", function (event) {
+      event.preventDefault();
+      document.getElementById("contactForm").style.display = "block";
+      document.getElementById("thank-you-message").style.display = "none";
+      document.getElementById("contactForm").reset();
+    });
+  </script>
+
+  <!-- Footer -->
+  <footer>
+    <p>© 2025 PENNIO.DESIGN – Designed for Clarity.<br>
+      <a href="https://pennio-design.github.io/bylt" target="_blank">Explore BYLT by PENNIO</a>
+    </p>
+  </footer>
+
+  <!-- Modal for PDF Portfolio -->
+  <div id="portfolioModal" class="modal">
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <embed src="portfolio.pdf" type="application/pdf" width="100%" height="600px" />
+    </div>
   </div>
-</section>
 
-<!-- PORTFOLIO Section -->
-<section id="portfolio">
-  <h2>Featured Work</h2>
-  <p>Every brand tells a story. Here are a few I’ve helped bring to life.</p>
-  <button id="openPortfolio">View My PDF Portfolio</button>
-</section>
-
-<!-- SERVICES Quick Links -->
-<section id="services">
-  <h2>Services</h2>
-  <div class="service-buttons">
-    <button onclick="prefillService('Brand Systems Setup (BYLT4U)')">Brand Systems Setup (BYLT4U)</button>
-    <button onclick="prefillService('Campaign Strategy')">Campaign Strategy</button>
-    <button onclick="prefillService('Brand Design')">Brand Design</button>
-    <button onclick="prefillService('Website Experience')">Website Experience</button>
-    <button onclick="prefillService('Automation Flow')">Automation Flow</button>
-    <button onclick="prefillService('Content System')">Content System</button>
-    <button onclick="prefillService('Clarity Session')">Clarity Session</button>
-  </div>
-</section>
-
-<!-- INSTAGRAM Section -->
-<section id="instagram">
-  <h2>Latest Projects</h2>
-  <div id="insta-feed" class="instagram-container">
-    <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/pennio.design/" data-instgrm-version="14" style="background:#FFF; border:0; margin:1px; max-width:540px; min-width:326px; padding:0; width:99.375%;"></blockquote>
-    <script async src="//www.instagram.com/embed.js"></script>
-  </div>
-</section>
-
-<!-- CONTACT Section -->
-<section id="contact">
-  <h2>Let’s Build Together</h2>
-  <p class="intro">Tell me what you want to create — I’ll help you bring it to life with design, clarity, and purpose.</p>
-
-  <form id="contactForm" action="https://formsubmit.co/91dd305c9a1f9afd33dc0ca5b60f1311" method="POST" target="hidden_iframe">
-    <input type="hidden" name="_subject" value="New Project Request from PENNIO.DESIGN" />
-    <input type="hidden" name="_captcha" value="false" />
-
-    <input type="text" name="name" placeholder="Your Name" required>
-    <input type="email" name="email" placeholder="Your Email" required>
-
-    <label for="service">Choose a Service</label>
-    <select name="service" id="service" required>
-      <option value="" disabled selected>Select one...</option>
-      <option value="Brand Systems Setup (BYLT4U)">Brand Systems Setup (BYLT4U)</option>
-      <option value="Campaign Strategy">Campaign Strategy</option>
-      <option value="Brand Design">Brand Design</option>
-      <option value="Website Experience">Website Experience</option>
-      <option value="Automation Flow">Automation Flow</option>
-      <option value="Content System">Content System</option>
-      <option value="Clarity Session">Clarity Session</option>
-    </select>
-
-    <textarea name="message" id="message" placeholder="Tell me about your project..." required></textarea>
-    <button type="submit">Send Message</button>
-  </form>
-
-  <iframe name="hidden_iframe" style="display:none;"></iframe>
-
-  <div id="thank-you-message" style="display:none;">
-    <h3>Thank You!</h3>
-    <p>Your message has been sent successfully. I’ll be in touch shortly.</p>
-    <a href="#contact" id="refreshForm">Send another message</a>
-  </div>
-</section>
-
-<script>
-  function prefillService(serviceName) {
-    document.getElementById('service').value = serviceName;
-    document.getElementById('message').value = `Hi PENNIO, I’m interested in the ${serviceName} service.`;
-    document.querySelector('#contact').scrollIntoView({ behavior: 'smooth' });
-  }
-
-  document.getElementById("contactForm").addEventListener("submit", function () {
-    document.getElementById("contactForm").style.display = "none";
-    document.getElementById("thank-you-message").style.display = "block";
-  });
-
-  document.getElementById("refreshForm").addEventListener("click", function (event) {
-    event.preventDefault();
-    document.getElementById("contactForm").style.display = "block";
-    document.getElementById("thank-you-message").style.display = "none";
-    document.getElementById("contactForm").reset();
-  });
-</script>
-
-<!-- Footer -->
-<footer>
-  <p>© 2025 PENNIO.DESIGN – Designed for Clarity. | <a href="https://pennio-design.github.io/bylt" target="_blank">Explore BYLT</a></p>
-</footer>
-
-<!-- Modal for PDF Portfolio -->
-<div id="portfolioModal" class="modal">
-  <div class="modal-content">
-    <span class="close">&times;</span>
-    <embed src="portfolio.pdf" type="application/pdf" width="100%" height="600px" />
-  </div>
-</div>
-
-<script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
