--- a/index.html
+++ b/index.html
@@ -45,6 +45,14 @@
   <h2>Featured Work</h2>
   <p>Every brand tells a story. Here are a few I’ve helped bring to life.</p>
   <button id="openPortfolio">View My PDF Portfolio</button>
+
+<!-- Modal -->
+<div id="pdfModal" class="modal">
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <iframe id="pdfFrame" src="" frameborder="0"></iframe>
+  </div>
+</div>
 </section>
 
 <!-- WHAT WE’RE BYLDING -->
