--- a/bylt/index.html
+++ b/bylt/index.html
@@ -165,6 +165,39 @@
             </select>
           </div>
 
+          <!-- New fields added below -->
+
+          <div>
+            <label class="block text-left font-semibold mb-1">Who is your target audience or ideal customer?</label>
+            <textarea name="Target Audience" rows="3" class="w-full border-gray-300 rounded-md p-3" placeholder="Describe who you are trying to reach."></textarea>
+          </div>
+
+          <div>
+            <label class="block text-left font-semibold mb-1">Describe your audience’s demographics</label>
+            <textarea name="Audience Demographics" rows="3" class="w-full border-gray-300 rounded-md p-3" placeholder="e.g., age, location, income, interests."></textarea>
+          </div>
+
+          <div>
+            <label class="block text-left font-semibold mb-1">What are your top 3 business goals for the next 6–12 months?</label>
+            <textarea name="Top 3 Business Goals" rows="4" class="w-full border-gray-300 rounded-md p-3" placeholder="List your primary objectives (e.g., increase sales, expand market, build community)."></textarea>
+          </div>
+
+          <div>
+            <label class="block text-left font-semibold mb-1">Who are your main competitors?</label>
+            <input type="text" name="Main Competitors" class="w-full border-gray-300 rounded-md p-3" placeholder="List 1-3 main competitors if applicable." />
+          </div>
+
+          <div>
+            <label class="block text-left font-semibold mb-1">What is your estimated budget for this project/service?</label>
+            <select name="Estimated Budget" class="w-full border-gray-300 rounded-md p-3 bg-white">
+              <option value="" disabled selected>Select an option...</option>
+              <option value="Under $500">$500 - $1,000</option>
+              <option value="$1,000 - $2,500">$1,000 - $2,500</option>
+              <option value="$2,500 - $5,000">$2,500 - $5,000</option>
+              <option value="Over $5,000">Over $5,000</option>
+            </select>
+          </div>
+
           <div>
             <label class="block text-left font-semibold mb-1">Message</label>
             <textarea name="Message" rows="4" class="w-full border-gray-300 rounded-md p-3" placeholder="Tell us what you’d like to build with BYLT..."></textarea>
