--- a/bylt/index.html
+++ b/bylt/index.html
@@ -239,8 +239,9 @@
 
     </div>
   </section>
-<!-- ==============================================
-       2. TRANSPARENT PRICING (Updated with All Steps)
+
+  <!-- ==============================================
+       2. TRANSPARENT PRICING
        ============================================== -->
   <section id="pricing" class="py-20 px-4 md:px-6 bg-white border-t border-brand-border mt-12">
     <div class="max-w-6xl mx-auto">
@@ -360,7 +361,7 @@
   </section>
 
   <!-- ==============================================
-       3. CONTACT SECTION (Restored & Styled)
+       3. CONTACT SECTION
        ============================================== -->
   <section id="contact" class="py-24 px-4 md:px-6 bg-[#FAFAFA]">
     <div class="max-w-xl mx-auto">
@@ -399,6 +400,7 @@
                         <option value="" disabled selected>Select an option...</option>
                         <option value="Clarity Session">Clarity Session (₦75k)</option>
                         <option value="BYLT.Frame">BYLT.Frame Identity (₦450k)</option>
+                        <option value="BYLT.Strategy Package">BYLT.Strategy Package (₦300k)</option>
                         <option value="BYLT4U Package">BYLT4U Full System (₦1.5M+)</option>
                         <option value="BYLT.Root">BYLT.Root (Foundation)</option>
                         <option value="BYLT.Map">BYLT.Map (Strategy)</option>
