--- a/bylt/index.html
+++ b/bylt/index.html
@@ -254,7 +254,7 @@
       <!-- MAIN PACKAGES (The "Big 3") -->
       <div class="grid grid-cols-1 md:grid-cols-3 gap-8 items-start mb-20">
         
-        <!-- PLAN 1: STRATEGY TRIO (Root + Map + Voice) -->
+        <!-- PLAN 1: STRATEGY TRIO -->
         <div class="border border-brand-border rounded-2xl p-8 flex flex-col hover:border-brand-orange/50 transition-colors bg-neutral-50/50">
           <div class="mb-4">
             <span class="bg-white border border-brand-border text-neutral-600 px-3 py-1 rounded-full text-xs font-bold uppercase">The Strategy Core</span>
@@ -334,7 +334,7 @@
           <div class="grid grid-cols-1 md:grid-cols-4 gap-4 px-6 py-5 items-center hover:bg-neutral-50/50 transition-colors">
             <div class="col-span-2">
               <h4 class="font-bold text-neutral-900">BYLT.Echo (Marketing Kit)</h4>
-              <p class="text-sm text-neutral-500">Social media templates (Canva), email signature, and business card design.</p>
+              <p class="text-sm text-neutral-500">Social media templates (Canva), email signature, and business card.</p>
             </div>
             <div class="font-mono text-neutral-600">₦150,000</div>
             <div class="text-right">
@@ -442,9 +442,8 @@
         <p class="font-bold text-lg mb-2 tracking-tight">PENNIO<span class="text-brand-orange">.DESIGN</span></p>
         <p class="text-sm text-neutral-500">&copy; 2025 PENNIO.DESIGN. Lagos, Nigeria.</p>
         <div class="flex justify-center gap-6 mt-6">
-            <a href="#" class="text-neutral-400 hover:text-brand-orange transition-colors"><i data-lucide="instagram" class="w-5 h-5"></i></a>
-            <a href="#" class="text-neutral-400 hover:text-brand-orange transition-colors"><i data-lucide="linkedin" class="w-5 h-5"></i></a>
-            <a href="#" class="text-neutral-400 hover:text-brand-orange transition-colors"><i data-lucide="twitter" class="w-5 h-5"></i></a>
+            <a href="https://www.instagram.com/pennio.design/" target="_blank" class="text-neutral-400 hover:text-brand-orange transition-colors"><i data-lucide="instagram" class="w-5 h-5"></i></a>
+            <a href="https://www.linkedin.com/in/pauloyatowo/" target="_blank" class="text-neutral-400 hover:text-brand-orange transition-colors"><i data-lucide="linkedin" class="w-5 h-5"></i></a>
         </div>
     </div>
   </footer>
