--- a/bylt/index.html
+++ b/bylt/index.html
@@ -396,10 +396,21 @@
         <p class="font-bold text-lg mb-2 tracking-tight">PENNIO<span class="text-brand-orange">.DESIGN</span></p>
         <p class="text-sm text-neutral-500">&copy; 2025 PENNIO.DESIGN. Lagos, Nigeria.</p>
         <div class="flex justify-center gap-6 mt-6">
-            <a href="https://instagram.com/pennio.design" class="text-neutral-400 hover:text-brand-orange transition-colors"><i data-lucide="instagram" class="w-5 h-5"></i></a>
-            <a href="#" class="text-neutral-400 hover:text-brand-orange transition-colors"><i data-lucide="linkedin" class="w-5 h-5"></i></a>
-            <a href="#" class="text-neutral-400 hover:text-brand-orange transition-colors"><i data-lucide="twitter" class="w-5 h-5"></i></a>
-        </div>
+    <!-- Instagram -->
+    <a href="https://instagram.com/pennio.design" target="_blank" rel="noopener noreferrer" class="text-neutral-400 hover:text-brand-orange transition-colors">
+        <i data-lucide="instagram" class="w-5 h-5"></i>
+    </a>
+    
+    <!-- LinkedIn (Assumed Paul Oyatowo based on form) -->
+    <a href="https://www.linkedin.com/in/paul-oyatowo" target="_blank" rel="noopener noreferrer" class="text-neutral-400 hover:text-brand-orange transition-colors">
+        <i data-lucide="linkedin" class="w-5 h-5"></i>
+    </a>
+    
+    <!-- Twitter/X (Assumed Brand Handle) -->
+    <a href="https://twitter.com/penniodesign" target="_blank" rel="noopener noreferrer" class="text-neutral-400 hover:text-brand-orange transition-colors">
+        <i data-lucide="twitter" class="w-5 h-5"></i>
+    </a>
+</div>
     </div>
   </footer>
 
