--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
     </a>
     
     <!-- LinkedIn (Assumed Paul Oyatowo based on form) -->
-    <a href="https://www.linkedin.com/in/paul-oyatowo" target="_blank" rel="noopener noreferrer" class="text-neutral-400 hover:text-brand-orange transition-colors">
+    <a href="https://www.linkedin.com/in/pauloyatowo" target="_blank" rel="noopener noreferrer" class="text-neutral-400 hover:text-brand-orange transition-colors">
         <i data-lucide="linkedin" class="w-5 h-5"></i>
     </a>
     
